--- a/project/tsconfig.json
+++ b/project/tsconfig.json
@@ -4,6 +4,8 @@
   "compilerOptions": {
     "baseUrl": "./",
     "outDir": "./dist/out-tsc",
+    "resolveJsonModule": true,
+    "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "noImplicitOverride": true,
@@ -20,6 +22,8 @@
     "module": "es2020",
     "lib": [
       "es2020",
+      "es5",
+      "es6",
       "dom"
     ]
   },
